<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_5"
    tools:context=".activities.ComentariosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/arima_madurai"
                android:gravity="center"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="COMENTARIOS" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/arima_madurai"
                android:gravity="center"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="¿Qué valoración le das?" />

            <RatingBar
                android:id="@+id/ratingBarPuntuacionUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comentarioInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/arima_madurai"
                android:hint="Escribe tu comentario aquí"
                android:textColorHint="@color/red_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comentarioEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:maxLines="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Publicar"
                style="@style/MyButtonStyle"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/arima_madurai"
                android:gravity="center"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Echa un vistazo al resto de valoraciones" />
            <Spinner
                android:id="@+id/filtroDesplegableSpinnerComentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/filtro_comentarios"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end"
                android:layout_marginRight="25dp"
                android:background="@drawable/search_view_bg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComentarios"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnVolverAInfoActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Volver"
            style="@style/MyButtonStyle"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnVolverAlMenuPrincipal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Menú principal"
            style="@style/MyButtonStyle"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>